# forex-crypto-news-a2a-protocol

./: .env.sample  .gitignore  README.md  TELEX_FIX.md  TELEX_WEBHOOK_FIX.md  WEBHOOK_IMPLEMENTATION_GUIDE.md  WEBHOOK_INTEGRATION_GUIDE.md  a2a-config.json  docker-compose.yml  dockerfile  main.py  pyproject.toml  test_api.py  test_market_summary.py  test_telex_request.json  test_webhook.py
.github/workflows/: docker-publish.yml
agents/: market_agent.py
docs/: DOCKER.md  DYNAMIC_SYMBOLS.md  ENDPOINT_ARCHITECTURE.md  GITHUB_REGISTRY.md  MARKET_SUMMARY.md  TELEX_INTEGRATION.md  TESTING.md  TUTORIAL.md  market_summary_sample.json  medium-article.md  tweet-thread.txt
models/: a2a.py
prompts/: extract_coin.prompt
utils/: assets.py  caching.py  coin_aliases.py  coingecko_helpers.py  errors.py  gemini_client.py  intent_classifier.py  market_summary.py  news_fetcher.py  notifier.py  prompt_extraction.py  redis_client.py  session_store.py  technical_analysis.py  telex_parser.py
